# lpcxpresso54114

./: README.md
firmware/lpc541xx/: .gitignore  Cargo.toml  assemble.sh  build.rs  core0.x  core1.x  memory.x  pyocd.gdb  pyocd_user.py  start.s
firmware/lpc541xx/examples/: hello.rs  mailbox.rs  mutex.rs  nop.rs  xschedule.rs  xspawn.rs
firmware/lpc541xx/src/: lib.rs
tools/: Cargo.toml
