[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"
name = "lpc541xx"
version = "0.1.0"

[dependencies]
bare-metal = "0.2.4"
panic-halt = "0.2.0"
r0 = "0.2.2"

[dependencies.cortex-m-rtfm]
branch = "heterogeneus"
features = ["heterogeneous"]
git = "https://github.com/japaric/cortex-m-rtfm"

[dev-dependencies]
microamp = "0.1.0-alpha.1"
cortex-m = "0.6.0"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "z"
